all the sensors work with code, no movement yet

--- a/Motor_Test/platformio.ini
+++ b/Motor_Test/platformio.ini
@@ -14,9 +14,4 @@ board = esp32-s3-devkitc-1
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
-lib_deps = 
-	fastled/FastLED@^3.6.0
-	adafruit/Adafruit MPU6050@^2.2.6
-	Wire
-	adafruit/Adafruit BusIO@^1.15.0
-	adafruit/Adafruit Unified Sensor@^1.1.14
+monitor_filters = send_on_enter
