--- a/IR Beacon/platformio.ini
+++ b/IR Beacon/platformio.ini
@@ -14,7 +14,11 @@ board = esp32-s3-devkitc-1
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
-build_flags = -D IR_BEACON=1 
-lib_deps = fastled/FastLED@^3.6.0
+upload_port = /dev/tty.usbmodem1101
+monitor_port = /dev/tty.usbmodem1101
+build_flags = -D IR_BEACON=1
+lib_deps = 
+	fastled/FastLED@^3.6.0
+	h2zero/NimBLE-Arduino@^1.4.1
 lib_extra_dirs = 
-    /Users/mingweiyeoh/Documents/GitHub/Alipay/Alipay ESP32 Code/lib
+	/Users/mingweiyeoh/Documents/GitHub/Alipay/Alipay ESP32 Code/lib
