--- a/Alipay ESP32 Code/platformio.ini
+++ b/Alipay ESP32 Code/platformio.ini
@@ -14,9 +14,13 @@ board = esp32-s3-devkitc-1
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
+upload_port = /dev/tty.usbmodem2101
+monitor_port = /dev/tty.usbmodem2101
 lib_deps = 
 	fastled/FastLED@^3.6.0
 	adafruit/Adafruit MPU6050@^2.2.6
 	Wire
 	adafruit/Adafruit BusIO@^1.15.0
 	adafruit/Adafruit Unified Sensor@^1.1.14
+lib_extra_dirs = 
+	/Users/mingweiyeoh/Documents/GitHub/Alipay/IR Beacon/lib
