--- a/Alipay ESP32 Code/platformio.ini
+++ b/Alipay ESP32 Code/platformio.ini
@@ -22,5 +22,6 @@ lib_deps =
 	Wire
 	adafruit/Adafruit BusIO@^1.15.0
 	adafruit/Adafruit Unified Sensor@^1.1.14
+	h2zero/NimBLE-Arduino@^1.4.1
 lib_extra_dirs = 
 	/Users/mingweiyeoh/Documents/GitHub/Alipay/IR Beacon/lib
