--- a/Alipay ESP32 Code/platformio.ini
+++ b/Alipay ESP32 Code/platformio.ini
@@ -14,8 +14,8 @@ board = esp32-s3-devkitc-1
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
-upload_port = /dev/tty.usbmodem2101
-monitor_port = /dev/tty.usbmodem2101
+; upload_port = /dev/tty.usbmodem2101
+; monitor_port = /dev/tty.usbmodem2101
 lib_deps = 
 	fastled/FastLED@^3.6.0
 	adafruit/Adafruit MPU6050@^2.2.6
