--- a/IR Beacon/platformio.ini
+++ b/IR Beacon/platformio.ini
@@ -14,8 +14,8 @@ board = esp32-s3-devkitc-1
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
-upload_port = /dev/tty.usbmodem1101
-monitor_port = /dev/tty.usbmodem1101
+; upload_port = /dev/tty.usbmodem1101
+; monitor_port = /dev/tty.usbmodem1101
 build_flags = -D IR_BEACON=1
 lib_deps = 
 	fastled/FastLED@^3.6.0
