file management, increase controller.py readability, ability to change ir beam strength on the fly

--- a/IR Beacon/platformio.ini
+++ b/IR Beacon/platformio.ini
@@ -21,4 +21,4 @@ lib_deps =
 	fastled/FastLED@^3.6.0
 	h2zero/NimBLE-Arduino@^1.4.1
 lib_extra_dirs = 
-	/Users/mingweiyeoh/Documents/GitHub/Alipay/Alipay ESP32 Code/lib
+	/Users/mingweiyeoh/Documents/GitHub/Alipay/Alipay Robot Code/lib
