controls no longer reversed when flipped over

--- a/Alipay Robot Code/.vscode/settings.json
+++ b/Alipay Robot Code/.vscode/settings.json
@@ -8,6 +8,12 @@
         "vector": "cpp",
         "string_view": "cpp",
         "initializer_list": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "*.tcc": "cpp",
+        "memory": "cpp",
+        "istream": "cpp",
+        "functional": "cpp",
+        "tuple": "cpp",
+        "utility": "cpp"
     }
 }
