--- a/Robot Code/platformio.ini
+++ b/Robot Code/platformio.ini
@@ -14,8 +14,6 @@ board = esp32-s3-devkitc-1
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
-; upload_port = /dev/tty.usbmodem2101
-; monitor_port = /dev/tty.usbmodem2101
 lib_deps = 
 	fastled/FastLED@^3.6.0
 	adafruit/Adafruit MPU6050@^2.2.6
@@ -23,5 +21,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.15.0
 	adafruit/Adafruit Unified Sensor@^1.1.14
 	h2zero/NimBLE-Arduino@^1.4.1
+	moddingear/ESP32 ESC@^1.0.0
+	freenove/Freenove WS2812 Lib for ESP32@^1.0.6
 lib_extra_dirs = 
 	/Users/mingweiyeoh/Documents/GitHub/Alipay/IR Beacon/lib
