dshot + improved movement code.
 Still need to add in accelerometer and not have to fully rely on seeing the IR beacon every rotation

--- a/Robot Code/.vscode/settings.json
+++ b/Robot Code/.vscode/settings.json
@@ -14,6 +14,7 @@
         "istream": "cpp",
         "functional": "cpp",
         "tuple": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "list": "cpp"
     }
 }
