--- a/ADXL375 Test/platformio.ini
+++ b/ADXL375 Test/platformio.ini
@@ -12,14 +12,4 @@
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-upload_speed = 921600
-monitor_speed = 115200
-lib_deps = 
-	fastled/FastLED@^3.6.0
-	Wire
-	h2zero/NimBLE-Arduino@^1.4.1
-	freenove/Freenove WS2812 Lib for ESP32@^1.0.6
-	moddingear/ESP32 ESC@^1.0.0
-	adafruit/Adafruit ADXL375@^1.1.2
-lib_extra_dirs = 
-	/Users/mingweiyeoh/Documents/GitHub/Oreo/IR Beacon/lib
+lib_deps = adafruit/Adafruit ADXL375@^1.1.2
