--- a/Robot Code/platformio.ini
+++ b/Robot Code/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	h2zero/NimBLE-Arduino@^1.4.1
 	freenove/Freenove WS2812 Lib for ESP32@^1.0.6
 	moddingear/ESP32 ESC@^1.0.0
+	bblanchon/ArduinoJson@^7.0.4
