--- a/IR Beacon/platformio.ini
+++ b/IR Beacon/platformio.ini
@@ -8,13 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s3-devkitc-1]
+[env:esp32-c3-devkitc-1]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = esp32-c3-devkitm-1
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
-build_flags = -D IR_BEACON=1
+build_flags = 
+	-D IR_BEACON=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D ARDUINO_USB_MODE=1
 lib_deps = 
 	fastled/FastLED@^3.6.0
 	h2zero/NimBLE-Arduino@^1.4.1
