--- a/Motor_Test_PWM/platformio.ini
+++ b/Motor_Test_PWM/platformio.ini
@@ -8,10 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s3-devkitc-1]
+[env:esp32-c3-devkitc-1]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = esp32-c3-devkitm-1
+build_flags = 
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D ARDUINO_USB_MODE=1
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 monitor_filters = send_on_enter
+lib_deps = madhephaestus/ESP32Servo@^3.0.5
